@@ -19,6 +19,7 @@ fixed bugs:
 - fixed bug parsing an and-constraint in cip format
 - fixed bug in cons_setppc, did not handle new constraints with inactive variables
 - workaround for trying to add variable bounds with to small coefficients
+- fixed bug in heur_oneopt.c which forgot to check LP rows if local rows are present
 
 performance improvements:
 - fixed performance issue in debug mode, where SCIPvarGetLPSol_rec() calculated a value to often, which in the end lead
